openstack-trove (1:5.0.0~b1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 10 Dec 2015 17:42:26 +0100

openstack-trove (1:4.0.0-3) unstable; urgency=medium

  * Added q-text-as-data in depends of trove-api.

 -- Thomas Goirand <zigo@debian.org>  Tue, 03 Nov 2015 11:55:15 +0000

openstack-trove (1:4.0.0-2) unstable; urgency=medium

  * Rebuilt with openstack-pkg-tools 37 to use Keystone API v3.

 -- Thomas Goirand <zigo@debian.org>  Tue, 03 Nov 2015 09:13:13 +0000

openstack-trove (1:4.0.0-1) unstable; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Removed fix-no-support-for-sslv3-in-debian.patch applied upstream.

 -- Thomas Goirand <zigo@debian.org>  Thu, 29 Oct 2015 03:10:20 +0100

openstack-trove (2015.1.0-4) unstable; urgency=medium

  * Rebuilt with SQLAlchemy >= 1.0 (Closes: #794352).

 -- Thomas Goirand <zigo@debian.org>  Mon, 03 Aug 2015 07:59:39 +0000

openstack-trove (2015.1.0-3) unstable; urgency=medium

  * Removes the suggests: python-suds (Closes: #788083).

 -- Thomas Goirand <zigo@debian.org>  Sun, 14 Jun 2015 15:28:24 +0200

openstack-trove (2015.1.0-2) unstable; urgency=medium

  * Added creation of /var/cache/trove (owned by trove:trove).

 -- Thomas Goirand <zigo@debian.org>  Fri, 12 Jun 2015 01:12:42 +0200

openstack-trove (2015.1.0-1) unstable; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 30 Apr 2015 22:14:22 +0000

openstack-trove (2015.1~rc2-1) unstable; urgency=medium

  * New upstream release.
  * Uploading to unstable.
  * Reviewed (build-)depends for this release.
  * Dropped do-not-use-network-when-building-docs.patch now useless.
  * Allow unit tests to fail.
  * Rebased default sql connection patch, and fixed directive names.

 -- Thomas Goirand <zigo@debian.org>  Thu, 01 Jan 2015 22:43:50 +0100

openstack-trove (2014.2-2) experimental; urgency=medium
